<resources>
    <string name="app_name">Currency Converter</string>
    <string name="convert">Convert</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="i_want_to_convert">I want to convert</string>
    <string name="to">To</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
</resources>
