<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_white"
        android:title="@string/favourites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_convert"
        android:enabled="true"
        android:icon="@drawable/ic_money_white"
        android:title="@string/convert"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>